# languagebuddy

./: .flake8  .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg  versions.txt
cro/: md_parse.py
data/: Vocab.xlsx  db.db  hrk_lexicon.yaml  sample.md  ~$Vocab.xlsx
languagebuddy/: language.py  lesson.py  lexicon.py  parser.py
scripts/: parse_excel_file_to_csv.py
