[tool.poetry]
name = "cro"
version = "0.1.0"
description = ""
authors = ["Maxime Filippini <maxime.filippini@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.2"
openpyxl = "^3.0.10"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
